# esp32-c3-embassy-template

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
